cluster/default/filebrowser/filebrowser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
      - image: filebrowser/filebrowser:v2.14.1
        name: filebrowser
        command: [ 'sh' ]
        args:
          - '-c'
          - '/filebrowser config init && /filebrowser users add vasko foo && /filebrowser users add leane foo && /filebrowser config set --auth.method=proxy --auth.header=Remote-User && /filebrowser'
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /srv/media/
            name: media-pv
          - mountPath: /srv/photos/
            name: originals
          - mountPath: /.filebrowser.json
            subPath: .filebrowser.json
            name: config
      volumes:
        - name: originals
          persistentVolumeClaim:
            claimName: original-photos
        - name: media-pv
          persistentVolumeClaim:
            claimName: nfs-hdd-raid-pvc
        - name: config
          configMap:
            name: config
