cluster/default/filebrowser/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: LoadBalancer
  selector:
    app: filebrowser
